Make everything sequential by default, add explicit -j n option
This is required in such build environments as Docker containers,
where too high a parallel factor makes the build run out of
memory.

***NO_CI***

--- a/.docker/everest/Dockerfile
+++ b/.docker/everest/Dockerfile
@@ -1,2 +1,8 @@
 FROM projecteverest/everest-chomolungma
-RUN ./everest --yes check pull make test verify
+
+# parallel_opt is either empty, or -j n, where n is
+# the max number of parallel jobs when building the image
+# (by default 1)
+ARG parallel_opt
+
+RUN ./everest --yes $parallel_opt check pull make test verify
