everest Dockerfile: pass new arguments after pull
So that new arguments that were not recognized by earlier
versions of the everest script can be recognized by the latest
version.

***NO_CI***

--- a/.docker/everest/Dockerfile
+++ b/.docker/everest/Dockerfile
@@ -5,4 +5,4 @@ FROM projecteverest/everest-chomolungma
 # (by default 1)
 ARG parallel_opt
 
-RUN ./everest --yes $parallel_opt check pull make test verify
+RUN ./everest --yes check pull $parallel_opt make test verify
