chomolungma: disable parallel build for Coq
Not supported by Docker Hub

--- a/.docker/everest-chomolungma/Dockerfile
+++ b/.docker/everest-chomolungma/Dockerfile
@@ -125,7 +125,7 @@ ENV LIBSODIUM_HOME /usr/local
 # Install Coq
 ENV coqv 8.6
 RUN opam repo add coq-released http://coq.inria.fr/opam/released
-RUN opam install -j 8 coq.${coqv} && opam pin add coq ${coqv}
+RUN opam install coq.${coqv} && opam pin add coq ${coqv}
 
 # Set the final directory entrypoint
 WORKDIR ${MYHOME}/everest
