--- a/.docker/ewerest/Dockerfile
+++ b/.docker/ewerest/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR "C:\ewerest"
 WORKDIR "vs2017"
 ADD ["https://aka.ms/vs/15/release/vs_community.exe", "vs2017.exe"]
 # Windows SDK needed by Vale
-RUN .\vs2017.exe --add Microsoft.VisualStudio.Component.FSharp --add Microsoft.Component.MSBuild --add Microsoft.VisualStudio.Component.NuGet --add Microsoft.VisualStudio.Component.VC.Tools.x86.x64 --add Microsoft.VisualStudio.Component.VC.CoreIde --add Microsoft.VisualStudio.Component.WindowsSDK.15063.Desktop --quiet --wait
+RUN .\vs2017.exe --add Microsoft.VisualStudio.Component.FSharp --add Microsoft.Component.MSBuild --add Microsoft.VisualStudio.Component.NuGet --add Microsoft.VisualStudio.Component.VC.Tools.x86.x64 --add Microsoft.VisualStudio.Component.VC.CoreIde --add Microsoft.VisualStudio.Component.Windows10SDK.15063.Desktop --quiet --wait
 WORKDIR ".."
 
 WORKDIR "python"
