--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ kremlin
 mitls-fstar
 MLCrypto
 log
+fstarlang_binaries
 
 test/_build
 test/test.native
@@ -13,6 +14,6 @@ flexdll/
 nuget/
 setup.log
 setup.log.full
-z3-4.5.0-x64-win/
+z3-*/
 *.zip
 .repo
